[gd_scene load_steps=4 format=4 uid="uid://k2me1ajen246"]

[ext_resource type="TileSet" uid="uid://cro1fx4ifi25h" path="res://scenes/gametiles.tres" id="1_el5y6"]
[ext_resource type="Script" uid="uid://dukv51m2awla" path="res://scenes/inventory/inventory.gd" id="1_tvok8"]
[ext_resource type="PackedScene" uid="uid://nig5w7o84v7" path="res://scenes/inventory/inventory_slot.tscn" id="2_4axmw"]

[node name="Inventory" type="Node2D"]
script = ExtResource("1_tvok8")

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAAAAAABAAAAAAACAAAAAAACAAAAAAACAAAAAAAAAAEAAAACAAAAAAAAAAIAAAACAAAAAAAAAAMAAAACAAAAAAAAAAQAAAACAAAAAAAAAAUAAAACAAAAAAAAAAYAAAACAAAAAAAAAAcAAAACAAAAAAAAAAgAAAACAAAAAAAAAAkAAAACAAAAAAAAAAoAAAACAAAAAAACAAoAAAACAAAAAAACAAkAAAACAAAAAAABAAkAAAACAAAAAAABAAoAAAACAAAAAAACAAgAAAACAAAAAAACAAcAAAACAAAAAAABAAgAAAACAAAAAAABAAcAAAACAAAAAAACAAYAAAACAAAAAAABAAYAAAACAAAAAAABAAUAAAACAAAAAAABAAQAAAACAAAAAAABAAMAAAACAAAAAAABAAIAAAACAAAAAAABAAEAAAACAAAAAAACAAEAAAACAAAAAAACAAIAAAACAAAAAAACAAMAAAACAAAAAAACAAUAAAACAAAAAAACAAQAAAACAAAAAAA=")
tile_set = ExtResource("1_el5y6")

[node name="Slots" type="Node2D" parent="."]

[node name="Slot1" parent="Slots" instance=ExtResource("2_4axmw")]
position = Vector2(48, 48)
block = 1

[node name="Slot2" parent="Slots" instance=ExtResource("2_4axmw")]
position = Vector2(48, 112)
block = 2

[node name="Slot3" parent="Slots" instance=ExtResource("2_4axmw")]
position = Vector2(48, 176)
block = 3

[node name="Slot4" parent="Slots" instance=ExtResource("2_4axmw")]
position = Vector2(48, 240)
block = 4

[node name="Slot5" parent="Slots" instance=ExtResource("2_4axmw")]
position = Vector2(48, 304)

[connection signal="selected" from="Slots/Slot1" to="." method="_on_slot_selected"]
[connection signal="selected" from="Slots/Slot2" to="." method="_on_slot_selected"]
[connection signal="selected" from="Slots/Slot3" to="." method="_on_slot_selected"]
[connection signal="selected" from="Slots/Slot4" to="." method="_on_slot_selected"]
[connection signal="selected" from="Slots/Slot5" to="." method="_on_slot_selected"]
